Update HttpProxy and complete opendata refactor using URIs instead of URLs